# Moonscraper-Chart-Editor

./: .gitignore  LICENSE  LINUX TODO.txt  LINUX_TODO.md  Moonscraper Chart Editor Design Document.docx  OSX TODO.txt  README.md
Installer/Builds/: .gitignore
Installer/Scripts/: MSCE Win32.iss  MSCE Win64.iss  MSCE Windows.iss
Moonscraper Chart Editor/: 5000 Robotass.chart  5000 Robots.chart  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  ENDLESS REBIRTH (sectionless).chart  ENDLESS REBIRTH(clone).chart  Endless Rebirth(UNFORCED).chart  Endless Rebirth(UNFORCED).mid  Endless Rebirth.chart  Endless Rebirth.mid  GH-csharp.sln  GH.CSharp.csproj  GH.sln  Moonscraper Chart Editor Manual.docx  Moonscraper Chart Editor Manuel.docx  Moonscraper Chart Editor.CSharp.Editor.Plugins.csproj  Moonscraper Chart Editor.CSharp.Editor.csproj  Moonscraper Chart Editor.CSharp.Plugins.csproj  Moonscraper Chart Editor.CSharp.csproj  Moonscraper Chart Editor.Editor.csproj  Moonscraper Chart Editor.Plugins.csproj  Moonscraper Chart Editor.csproj  Moonscraper Chart Editor.sln  aotdrock(UNFORCED).mid  asd.mid  bwolp.chart  config.ini  errorTest.chart  newTest.chart  notes.chart  notes.mid.backup  test.chart  test.mid  testFile.chart  testOpen Note.chart  testOpenNote.chart  testOpenNoteOverwrite.chart
Moonscraper Chart Editor/Assets/: attribution.txt  config.ini  events.txt  hit_flames.anim  test.mixer
Moonscraper Chart Editor/Assets/Plugins/Native File Explorer/Linux/Source~/: CMakeLists.txt  noc_file_dialog.c
aur/: .gitignore  PKGBUILD  moonscraper-chart-editor.desktop  uninstall.sh
(+1427 files in other folders)
